--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <img src="data:image/jpg;base64, <%= image.img %>" style="height: 250px; width:250px; border: 2px solid black;">
+    <img src="../arts/1.jpg" alt="">
 </body>
 </html>
